--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Mwanzo</h1>
-        <p>Mwanzo est un petit test html et css pour apprendre à utiliser git et github</p>
+        <h1>Bob</h1>
+        <p>Bob est un petit test html et css pour apprendre à utiliser git et github</p>
     </body>
 </html>
