--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Mwanzo</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Bob</h1>
